--- a/package.json
+++ b/package.json
@@ -23,33 +23,38 @@
   },
   "dependencies": {
     "@medusajs/admin-sdk": "2.6.0",
-    "@medusajs/framework": "2.6.0",
-    "@medusajs/medusa": "2.6.0",
     "@medusajs/cli": "2.6.0",
+    "@medusajs/framework": "2.6.0",
+    "@medusajs/icons": "^2.6.1",
+    "@medusajs/medusa": "2.6.0",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "@types/three": "^0.174.0",
     "awilix": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
-    "multer": "^1.4.5-lts.1"
+    "three": "^0.174.0"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "6.4.3",
-    "@swc/jest": "^0.2.36",
     "@medusajs/test-utils": "2.6.0",
-    "@types/jest": "^29.5.13",
-    "jest": "^29.7.0",
-    "@types/node": "^20.0.0",
+    "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.13",
     "@types/multer": "^1.4.11",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
+    "jest": "^29.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
     "vite": "^5.2.11"
   },
   "engines": {
